# quantum-kernel

./: .gitignore  README.md  pyproject.toml
notebooks/: compare_feature_map.ipynb  diabetes_classifier.ipynb  mnist_classifier.ipynb  sklearn_datasets.ipynb  toy_problem.ipynb
src/: feature_map.py  kernel.py  schema.py  utils.py
