[tool.poetry]
name = "quantum-kernel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pennylane = "^0.36.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
